--- a/init.html
+++ b/init.html
@@ -1,1 +1,15 @@
-Hello World!!!x
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <ul class="list">
+        <li class="item">Hello</li>
+        <li class="item">Hello</li>
+        <li class="item">Hello</li>
+    </ul>g
+</body>
+</html>
