--- a/init.html
+++ b/init.html
@@ -8,8 +8,8 @@
 <body>
     <ul class="list">
         <li class="item">Hello</li>
-        <li class="item">Hello</li>
-        <li class="item">Hello</li>
+        <li class="item">Oussama</li>
+        <li class="item">Tic</li>
     </ul>g
 </body>
 </html>
